[gd_scene load_steps=9 format=2]

[ext_resource path="res://classic_memesbruh03.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Control.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 87.0
margin_top = 291.0
margin_right = 194.0
margin_bottom = 320.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 5 )
text = "Texto"

[node name="Lista" type="Label" parent="."]
margin_left = 155.0
margin_top = 28.0
margin_right = 475.0
margin_bottom = 143.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 1 )
text = "Lista"
align = 1
valign = 1

[node name="Botao e" type="Button" parent="."]
margin_left = 90.0
margin_top = 44.0
margin_right = 180.0
margin_bottom = 70.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 2 )
text = "Enviar"

[node name="botao lp" type="Button" parent="."]
margin_left = 92.0
margin_top = 163.0
margin_right = 200.0
margin_bottom = 192.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 3 )
text = "Lista Pronta"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 529.0
margin_top = 28.0
margin_right = 719.0
margin_bottom = 106.0
rect_scale = Vector2( 2, 2 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
text = "Digite aqui"
align = 1

[node name="Button2" type="Button" parent="."]
margin_left = 92.0
margin_top = 431.0
margin_right = 195.0
margin_bottom = 463.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 6 )
text = "Valor"

[node name="Label" type="Label" parent="."]
modulate = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
light_mask = 17
margin_left = 540.0
margin_top = 267.0
margin_right = 645.0
margin_bottom = 349.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 4 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Botao e" to="." method="_on_Botao_e_pressed"]
[connection signal="pressed" from="botao lp" to="." method="_on_botao_lp_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
